--- a/app/src/main/res/layout/activity_crop_field_manager.xml
+++ b/app/src/main/res/layout/activity_crop_field_manager.xml
@@ -383,7 +383,9 @@
             android:drawableTint="#ffffff"
             android:text="Save "
             android:textAllCaps="false"
-            android:textColor="#ffffff" />
+            android:textColor="#ffffff"
+            style="@style/Button"
+            />
 
 
 
