--- a/app/src/main/res/layout/activity_crop_scouting_manager.xml
+++ b/app/src/main/res/layout/activity_crop_scouting_manager.xml
@@ -33,9 +33,9 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="0.5"
                     android:text="@string/scouting_date"
-                    android:textStyle="bold"
+                    android:layout_marginBottom="4dp"
                     android:textSize="16sp"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="@color/textColor"
                     />
 
                 <EditText
@@ -45,7 +45,7 @@
                     android:layout_weight="1"
                     android:inputType="none"
                     android:hint="Select"
-                    android:background="@drawable/input_shapes"
+                    android:background="@drawable/input_shapes_grey_spinner"
                     android:textSize="14sp"
 
 
@@ -64,9 +64,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/scouting_method"
-                    android:textColor="@color/colorPrimary"
-                    android:textStyle="bold"
-
+                    android:textColor="@color/textColor"
+                    android:layout_marginBottom="4dp"
                     android:textSize="16sp" />
 
                 <EditText
@@ -74,7 +73,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="14sp"
-
                     android:background="@drawable/input_shapes"
                     android:hint="Enter.."
                     />
@@ -95,22 +93,26 @@
                     android:layout_height="wrap_content"
                     android:text="@string/infested"
                     android:layout_weight="0.6"
-                    android:textColor="@color/colorPrimary"
-                    android:textStyle="bold"
+                    android:textColor="@color/textColor"
+                    android:layout_marginBottom="4dp"
                     android:textSize="16sp" />
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/input_shapes_grey_spinner">
                 <Spinner
 
                     android:id="@+id/sp_crop_scouting_infested"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="0.4"
-                    android:textSize="14sp"
                     android:entries="@array/sp_crop_scouting_infested"
-                    android:background="@drawable/input_shapes"
+
 
 
                     />
+                </LinearLayout>
 
             </LinearLayout>
 
@@ -118,7 +120,8 @@
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/crop_scouting_show_hide_infestation">
+                android:id="@+id/crop_scouting_show_hide_infestation"
+                >
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -132,10 +135,14 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="0.5"
                     android:text="@string/infestation_type"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="@color/textColor"
+                    android:layout_marginBottom="4dp"
                     android:textSize="16sp"
-                    android:textStyle="bold" />
-
+                     />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/input_shapes_grey_spinner">
                 <Spinner
                     android:id="@+id/sp_crop_scouting_infestation_type"
                     android:layout_width="match_parent"
@@ -143,10 +150,10 @@
                     android:layout_weight="0.5"
                     android:textSize="14sp"
                     android:entries="@array/sp_crop_scouting_infestation_type"
-                    android:background="@drawable/input_shapes"
+
 
                     />
-
+            </LinearLayout>
             </LinearLayout>
 
             <LinearLayout
@@ -161,10 +168,14 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="0.5"
                     android:text="@string/infestation"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="@color/textColor"
+                    android:layout_marginBottom="4dp"
                     android:textSize="16sp"
-                    android:textStyle="bold" />
-
+                     />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/input_shapes_grey_spinner">
                 <Spinner
                     android:id="@+id/sp_crop_scouting_infestation"
                     android:layout_width="match_parent"
@@ -172,10 +183,9 @@
                     android:layout_weight="0.5"
                     android:textSize="14sp"
                     android:entries="@array/sp_crop_scouting_infestation_disease"
-                    android:background="@drawable/input_shapes"
 
                     />
-
+            </LinearLayout>
             </LinearLayout>
 
 
@@ -192,10 +202,13 @@
                     android:layout_height="wrap_content"
                     android:text="@string/infestation_level"
                     android:layout_weight="0.5"
-                    android:textColor="@color/colorPrimary"
-                    android:textStyle="bold"
+                    android:textColor="@color/textColor"
+                    android:layout_marginBottom="4dp"
                     android:textSize="16sp" />
-
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@drawable/input_shapes_grey_spinner">
                 <Spinner
                     android:id="@+id/sp_crop_scouting_infestation_level"
                     android:layout_width="match_parent"
@@ -204,10 +217,8 @@
                     android:textSize="14sp"
                     android:inputType="numberDecimal"
 
-                    android:background="@drawable/input_shapes"
-
                     />
-
+</LinearLayout>
             </LinearLayout>
             </LinearLayout>
             <LinearLayout
@@ -220,10 +231,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/cost"
-                    android:textColor="@color/colorPrimary"
-                    android:textStyle="bold"
-
-                    android:layout_marginRight="5dp"
+                    android:textColor="@color/textColor"
+                    android:layout_marginBottom="4dp"
                     android:textSize="16sp" />
 
                 <LinearLayout
@@ -237,7 +246,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
-                        android:background="@color/gray_mh">
+                        >
 
 
                         <TextView
@@ -247,7 +256,7 @@
                             android:padding="4dp"
                             android:text="@string/ugx"
                             android:gravity="center_vertical"
-                            android:textStyle="bold"
+                            android:background="@drawable/input_shapes_grey_units"
 
                             />
                         <EditText
@@ -273,7 +282,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_marginBottom="15dp"
+                android:layout_marginBottom="10dp"
                 >
 
                 <TextView
@@ -281,9 +290,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/remarks"
-                    android:textColor="@color/colorPrimary"
-                    android:textStyle="bold"
-
+                    android:textColor="@color/textColor"
+                    android:layout_marginBottom="4dp"
                     android:textSize="16sp" />
 
                 <EditText
@@ -310,27 +318,31 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_margin="4dp"
-                    android:layout_weight="1">
+                    android:layout_weight="1"
+                    android:layout_marginRight="10dp">
 
                     <TextView
 
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/recurrence"
-                        android:textColor="@color/colorPrimary"
-                        android:textStyle="bold"
+                        android:textColor="@color/textColor"
+                        android:layout_marginBottom="4dp"
                         android:textSize="16sp" />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/input_shapes_grey_spinner">
 
                     <Spinner
                         android:id="@+id/sp_crop_scouting_recurrence"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:ems="10"
-                        android:background="@drawable/input_shapes"
                         android:entries="@array/sp_crop_task_recurrence"
                         android:textSize="14sp"
                         />
+                    </LinearLayout>
                 </LinearLayout>
 
                 <LinearLayout
@@ -338,26 +350,30 @@
                     android:layout_height="match_parent"
                     android:orientation="vertical"
                     android:layout_weight="1"
-                    android:layout_margin="4dp">
+                    >
 
                     <TextView
 
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/reminders"
-                        android:textColor="@color/colorPrimary"
+                        android:textColor="@color/textColor"
                         android:textSize="16sp"
-                        android:textStyle="bold" />
+                        android:layout_marginBottom="4dp" />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/input_shapes_grey_spinner">
+
 
                     <Spinner
                         android:id="@+id/sp_crop_scouting_reminders"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/input_shapes"
                         android:textSize="14sp"
                         android:entries="@array/sp_crop_task_reminders"
                         />
-
+                    </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
             <LinearLayout
@@ -365,15 +381,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
                 android:visibility="gone"
                 >
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:orientation="horizontal"
                     android:layout_weight="1"
-                    android:layout_margin="4dp"
+                    android:layout_marginRight="10dp"
                     android:gravity="center_vertical"
                     >
 
@@ -381,10 +399,9 @@
 
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Every:"
-                        android:textColor="@color/colorPrimary"
+                        android:text="Every"
+                        android:textColor="@color/textColor"
                         android:textSize="16sp"
-                        android:textStyle="bold"
                         android:layout_weight="0.3"/>
 
                     <LinearLayout
@@ -392,7 +409,7 @@
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         android:layout_weight="0.7"
-                        android:background="@color/gray_mh">
+                        >
                         <EditText
                             android:id="@+id/txt_crop_scouting_weekly_weeks"
                             android:layout_width="wrap_content"
@@ -406,10 +423,11 @@
                         <TextView
 
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_height="match_parent"
+                            android:gravity="center"
+                            android:background="@drawable/input_shapes_grey_units_right"
                             android:text="Weeks"
-                            android:textSize="16sp"
-                            android:textStyle="bold"
+                            android:textSize="14sp"
                             android:layout_weight="0.2"/>
                     </LinearLayout>
 
@@ -420,16 +438,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:layout_margin="4dp"
                     android:layout_weight="1">
 
                     <TextView
 
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:text="@string/repeat_until"
-                        android:textColor="@color/colorPrimary"
-                        android:textStyle="bold"
+                        android:gravity="center_vertical"
+                        android:textColor="@color/textColor"
                         android:textSize="16sp"
                         android:layout_weight="0.3"/>
 
@@ -437,9 +454,8 @@
                         android:id="@+id/txt_crop_scouting_repeat_until"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/black"
                         android:hint="Select"
-                        android:background="@drawable/input_shapes"
+                        android:background="@drawable/input_shapes_grey_spinner"
                         android:inputType="none"
                         android:textSize="14sp"
                         android:layout_weight="0.7"/>
@@ -451,16 +467,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_margin="4dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
                 android:layout_weight="1"
-                android:background="@color/gray_mh"
                 android:visibility="gone"
+
                 >
                 <EditText
                     android:id="@+id/txt_crop_scouting_days_before"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/black"
                     android:hint="Enter.."
                     android:background="@drawable/input_shapes"
                     android:inputType="numberDecimal"
@@ -472,11 +488,11 @@
 
                 <TextView
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:gravity="center"
                     android:text="Days Before"
-                    android:textStyle="bold"
-                    android:textSize="16sp"
+                    android:background="@drawable/input_shapes_grey_units_right"
+                    android:textSize="14sp"
                     android:layout_weight="0.3"/>
 
 
@@ -487,7 +503,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/colorPrimary"
-                android:drawableTint="#ffffff"
                 android:text="Save "
                 android:textAllCaps="false"
                 android:textColor="#ffffff" />
