--- a/app/src/main/res/drawable/input_shapes_crops_card.xml
+++ b/app/src/main/res/drawable/input_shapes_crops_card.xml
@@ -2,8 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
     <item>
         <shape android:shape="rectangle" >
-            <solid android:color="@color/gray_spinner" />
-
+            <solid android:color="#E3ECE3" />
             <padding
                 android:bottom="1dp"
                 android:left="1dp"
@@ -18,8 +17,7 @@
                 android:left="5dp"
                 android:right="5dp"
                 android:top="5dp" />
-            <solid android:color="@color/gray_spinner_border" />
-
+            <solid android:color="#ffffff" />
 
 
         </shape>
