--- a/app/src/main/res/drawable/input_shapes_grey_units_right.xml
+++ b/app/src/main/res/drawable/input_shapes_grey_units_right.xml
@@ -2,11 +2,11 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
     <item>
         <shape android:shape="rectangle" >
-            <solid android:color="@color/gray_spinner" />
+            <solid android:color="@color/gray_gray" />
 
             <padding
                 android:bottom="1dp"
-                android:left="1dp"
+                android:left="0dp"
                 android:right="1dp"
                 android:top="1dp" />
         </shape>
@@ -14,10 +14,10 @@
     <item>
         <shape android:shape="rectangle" >
             <padding
-                android:bottom="5dp"
-                android:left="5dp"
-                android:right="5dp"
-                android:top="5dp" />
+                android:bottom="4dp"
+                android:left="4dp"
+                android:right="4dp"
+                android:top="4dp" />
             <solid android:color="@color/gray_spinner_border" />
 
 
