--- a/app/src/main/res/layout/activity_crop_cultivation_manager.xml
+++ b/app/src/main/res/layout/activity_crop_cultivation_manager.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="4dp"
     tools:context=".activities.CropCultivationManagerActivity">
 <ScrollView
     android:layout_width="match_parent"
@@ -29,9 +28,9 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
                 android:text="@string/cultivation_date"
-                android:textStyle="bold"
+                android:layout_marginBottom="4dp"
                 android:textSize="16sp"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/textColor"
                 />
 
             <EditText
@@ -53,7 +52,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_marginBottom="15dp"
+            android:layout_marginBottom="10dp"
             >
 
             <TextView
@@ -61,11 +60,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/operation"
-                android:textColor="@color/colorPrimary"
-                android:textStyle="bold"
+                android:textColor="@color/textColor"
+                android:layout_marginBottom="4dp"
                 android:layout_weight="0.5"
                 android:textSize="16sp" />
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@drawable/input_shapes_grey_spinner"
 
+    >
             <Spinner
                 android:id="@+id/sp_crop_cultivate_operation"
                 android:layout_width="match_parent"
@@ -73,9 +77,9 @@
                 android:textColor="@color/colorPrimary"
                 android:textSize="14sp"
                 android:entries="@array/crop_cultivate_operation"
-                android:background="@drawable/input_shapes"
 
                 />
+</LinearLayout>
         </LinearLayout>
 
         <LinearLayout
@@ -89,9 +93,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/operator"
-                android:textStyle="bold"
+                android:layout_marginBottom="4dp"
                 android:textSize="16sp"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/textColor"
                 />
 
             <EditText
@@ -118,27 +122,28 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/fixed_cost"
-                android:textStyle="bold"
+                android:layout_marginBottom="4dp"
                 android:textSize="16sp"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/textColor"
                 />
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:gravity="center_vertical"
-                android:background="@color/gray_mh"
-                android:layout_marginBottom="10dp">
+
+                >
 
            <TextView
-               android:id="@+id/crop_cost"
+               android:id="@+id/txt_crop_cultivate_currency"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/ugx"
                android:layout_weight="0.1"
                android:textSize="14sp"
                android:textAlignment="center"
-               android:textStyle="bold"
+
+               android:background="@drawable/input_shapes_grey_units"
                android:gravity="center_vertical"
 
                />
@@ -161,16 +166,17 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_marginBottom="10dp">
 
             <TextView
 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/notes"
-                android:textStyle="bold"
+                android:layout_marginBottom="4dp"
                 android:textSize="16sp"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/textColor"
                 />
 
 
@@ -205,6 +211,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_marginRight="10dp"
+                android:layout_marginBottom="10dp"
                 android:layout_weight="1">
 
                 <TextView
@@ -212,19 +219,25 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/recurrence"
-                    android:textColor="@color/colorPrimary"
-                    android:textStyle="bold"
+                    android:textColor="@color/textColor"
+                    android:layout_marginBottom="4dp"
                     android:textSize="16sp" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/input_shapes_grey_spinner"
+                    >
 
                 <Spinner
                     android:id="@+id/sp_crop_cultivation_recurrence"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
-                    android:background="@drawable/input_shapes"
                     android:entries="@array/sp_crop_task_recurrence"
                     android:textSize="14sp"
                     />
+                </LinearLayout>
             </LinearLayout>
 
             <LinearLayout
@@ -238,18 +251,23 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/reminders"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="@color/textColor"
                     android:textSize="16sp"
-                    android:textStyle="bold" />
+                    android:layout_marginBottom="4dp" />
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/input_shapes_grey_spinner"
+                    >
                 <Spinner
                     android:id="@+id/sp_crop_cultivation_reminders"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/input_shapes"
                     android:textSize="14sp"
                     android:entries="@array/sp_crop_task_reminders"
                     />
+                </LinearLayout>
 
             </LinearLayout>
         </LinearLayout>
@@ -259,6 +277,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:visibility="gone"
+            android:layout_marginBottom="4dp"
             >
 
             <LinearLayout
@@ -274,10 +293,10 @@
 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Every:"
-                    android:textColor="@color/colorPrimary"
+                    android:text="Every"
+                    android:textColor="@color/textColor"
                     android:textSize="16sp"
-                    android:textStyle="bold"
+
                     android:layout_weight="0.3"/>
 
                 <LinearLayout
@@ -299,10 +318,10 @@
                     <TextView
 
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:text="Weeks"
-                        android:textSize="16sp"
-                        android:textStyle="bold"
+                        android:textSize="14sp"
+                        android:background="@drawable/input_shapes_grey_units_right"
                         android:layout_weight="0.2"/>
                 </LinearLayout>
 
@@ -321,8 +340,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/repeat_until"
-                    android:textColor="@color/colorPrimary"
-                    android:textStyle="bold"
+                    android:textColor="@color/textColor"
                     android:textSize="16sp"
                     android:layout_weight="0.3"/>
 
@@ -330,9 +348,8 @@
                     android:id="@+id/txt_crop_cultivation_repeat_until"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/black"
                     android:hint="Select"
-                    android:background="@drawable/input_shapes"
+                    android:background="@drawable/input_shapes_grey_spinner"
                     android:inputType="none"
                     android:textSize="14sp"
                     android:layout_weight="0.7"/>
@@ -365,11 +382,11 @@
 
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:gravity="center"
                 android:text="Days Before"
-                android:textStyle="bold"
-                android:textSize="16sp"
+                android:background="@drawable/input_shapes_grey_units_right"
+                android:textSize="14sp"
                 android:layout_weight="0.3"/>
 
 
