--- a/app/src/main/res/layout/activity_crops_list.xml
+++ b/app/src/main/res/layout/activity_crops_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/light_gray"
+    android:background="#F4F4F4"
     tools:context=".activities.CropsListActivity">
 
 
@@ -15,7 +15,8 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_marginBottom="4dp">
 
 
             <android.support.v7.widget.RecyclerView
