--- a/app/src/main/res/layout/crop_fertilizer_application_list_card.xml
+++ b/app/src/main/res/layout/crop_fertilizer_application_list_card.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="0dp"
-    android:background="@color/gray">
+    android:background="#F4F4F4">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,16 +20,11 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="0.9"
             android:orientation="vertical">
 
-            <View
-                android:layout_width="1dp"
-                android:layout_height="40dp"
-                android:layout_marginStart="16dp"
-                android:background="@color/black"
-                android:textAlignment="center" />
+
 
             <ImageView
                 android:layout_width="36dp"
@@ -40,9 +35,9 @@
             <View
                 android:id="@+id/txt_view_crop_fertilizer_application_card_line"
                 android:layout_width="1dp"
-                android:layout_height="85dp"
+                android:layout_height="match_parent"
                 android:layout_marginStart="16dp"
-                android:background="@color/black"
+                android:background="#E7EAE7"
                 android:textAlignment="center" />
 
         </LinearLayout>
@@ -51,24 +46,26 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0.1"
+            android:paddingRight="22dp"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/txt_view_crop_fertilizer_application_card_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="40dp"
                 android:layout_marginBottom="8dp"
                 android:text="20-08-2018"
                 android:textSize="18sp"
-                android:textColor="@color/blackText" />
+                android:textColor="#A6C0A7" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
-                android:background="@drawable/black_border"
-                android:orientation="vertical">
+                android:background="@drawable/input_shapes_crops_card"
+                android:orientation="vertical"
+                android:padding="10dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -76,12 +73,13 @@
                     android:orientation="horizontal"
                     android:gravity="center_vertical"
                     android:layout_margin="0dp"
-                    android:padding="8dp">
+                    android:padding="4dp">
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="0.9"
                         android:textSize="18sp"
+                        android:layout_marginStart="24dp"
                         android:textAlignment="gravity"
                         android:text="Fertilizer Application"
                         android:textColor="@color/blackText" />
@@ -97,21 +95,23 @@
                             android:id="@+id/img_crop_fertilizer_application_card_more"
                             android:layout_width="28dp"
                             android:layout_height="28dp"
+                            android:layout_marginRight="11dp"
                             android:src="@drawable/more_options_icon" />
                     </LinearLayout>
                 </LinearLayout>
 
                 <View
-                    android:layout_width="match_parent"
+                    android:layout_width="243dp"
                     android:layout_height="1dp"
-                    android:background="@color/black"
-                    />
+                    android:layout_marginStart="15dp"
+                    android:layout_marginBottom="5dp"
+                    android:background="#D2D3D2" />
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-
+                    android:layout_marginStart="35dp"
                     android:orientation="horizontal"
-                    android:padding="8dp">
+                    android:padding="2dp">
 
                     <TextView
                         android:id="@+id/txt_view_crop_fertilizer_application_card_operation"
@@ -122,23 +122,19 @@
                         android:text="Field Preparation"
                         android:textColor="@color/blackText" />
                 </LinearLayout>
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/black"
-                     />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:layout_margin="0dp"
-                    android:padding="8dp">
+                    android:padding="4dp">
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:layout_marginStart="34dp"
                         android:text="Method : "
                         android:textSize="14sp"
                         android:textColor="@color/blackText" />
@@ -150,24 +146,21 @@
                         android:layout_weight="1"
                         android:text="50%"
                         android:textSize="14sp"
-                        android:textColor="@color/blackText" />
+                        android:textColor="#899889" />
                 </LinearLayout>
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/black"
-                     />
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:layout_margin="0dp"
-                    android:padding="8dp">
+                    android:padding="4dp">
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:layout_marginStart="34dp"
                         android:text="Rate : "
                         android:textSize="14sp"
                         android:textColor="@color/blackText" />
@@ -179,24 +172,21 @@
                         android:layout_weight="1"
                         android:text="50%"
                         android:textSize="14sp"
-                        android:textColor="@color/blackText" />
+                        android:textColor="#899889" />
                 </LinearLayout>
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/black"
-                   />
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:layout_margin="0dp"
-                    android:padding="8dp">
+                    android:layout_marginBottom="10dp"
+                    android:padding="4dp">
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:layout_marginStart="34dp"
                         android:text="Cost : "
                         android:textSize="14sp"
                         android:textColor="@color/blackText" />
@@ -208,8 +198,7 @@
                         android:layout_weight="1"
                         android:text="UGX 467000"
                         android:textSize="14sp"
-                        android:textAlignment="textEnd"
-                        android:textColor="@color/blackText" />
+                        android:textColor="#899889" />
                 </LinearLayout>
 
             </LinearLayout>
