--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -41,7 +41,13 @@
 
 
     <style name="Button" parent="Base.TextAppearance.AppCompat.Button">
-        <item name="backgroundTint">@color/colorPrimary</item>
+        <item name="backgroundTint">@color/buttonColor</item>
+        <item name="android:layout_marginBottom">2dp</item>
+    </style>
+    <style name="CropButton" parent="Base.TextAppearance.AppCompat.Button">
+
+        <item name="android:background">@drawable/input_shapes</item>
+        <item name="android:textColor">#2E7C33</item>
     </style>
 
     <style name="generalnotitle" parent="@android:style/Theme.Black.NoTitleBar.Fullscreen">
